Added security config (Secrets removed)